--- a/css/aula10.css
+++ b/css/aula10.css
@@ -1,118 +1,11 @@
-html,
-body,
-div,
-span,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-a,
-address,
-em,
-img,
-strong,
-u,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-main,
-article,
-aside, 
-figure,
-figcaption,
-footer,
-header,
-nav,
-section,
-time,
-audio,
-video{
-  border:0;
-  font-size:100%;
-  font:inherit;
-  margin:0;
-  padding:0;
-  vertical-align:baseline;
+*{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  list-style: none;
 }
-html{scroll-behavior:smooth;}
-body{
-  background:#fff;
-  color:#000;
-  font-family:Arial, Helvetica, sans-serif;
-  font-size:14px;
-  line-height:1;
-}
-ol, 
-ul,
-li{list-style:none;}
-strong{font-family:Arial, Helvetica, sans-serif;}
-table{
-  border-collapse:collapse;
-  border-spacing:0;
-  width:100%;
-}
-img{width:100%;}
-a,
-a:hover{
-  color:#000;
-  text-decoration:none;
-  cursor:pointer;
-}
-:focus{outline:0;}
-:hover{transition:.3s ease;}
-input[type="text"],
-input[type="email"],
-input[type="tel"],
-input[type="search"],
-input[type="url"],
-textarea,
-select{
-  border:0;
-  border-bottom:1px solid #000;
-  color:#000;
-  padding:8px 0;
-  font:14px Arial, Helvetica, sans-serif;
-  background:transparent;
-  width:100%;
-}
-input[type="text"]:focus,
-input[type="email"]:focus,
-input[type="tel"]:focus,
-input[type="search"]:focus,
-input[type="url"]:focus,
-textarea:focus,
-select:focus{border-color:#900;}
-input[type="submit"],
-input[type="button"],
-button{
-  border:1px solid #000;
-  text-transform:uppercase;
-  padding:10px 30px;
-  color:#000;
-  font:12px Arial, Helvetica, sans-serif;
-  background:transparent;
-}
-input[type="text"]:placeholder,
-input[type="email"]:placeholder,
-input[type="tel"]:placeholder,
-input[type="search"]:placeholder,
-input[type="url"]:placeholder{color:#666;}
 
+/* TOPO */
 h1{
     width: 520px;
     height: 106px;
@@ -120,6 +13,7 @@ h1{
    overflow: hidden;
 }
 
+/* CONTEÚDO */
 .banner{
     background: url(../../Imagens/Fotos/familia-na-praia.jpg) center no-repeat;
     text-align: center;
@@ -130,5 +24,38 @@ h1{
 h2{
     color: black;
     font:bold 26px Arial, Helvetica, sans-serif;
-    background: rgba(255,255,255,0,7);
+    background-color: rgba(255,255,255,0,5);
+}
+
+.container{
+  width: 950px;
+  margin: -50px auto;
+  background: #fff;
+}
+
+.post h4{
+  color: #900;
+  font: normal 16px 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+.post h3{
+  font-size: 36px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 10px 0 15px;
+}
+
+.post p{
+  margin-bottom: 10px;
+}
+
+.author{
+  font-size: 18px;
+}
+
+/*  RODAPÉ */
+footer{
+  border-top: 1px solid black;
+  padding: 20px 0;
+  margin-top: 30px;
+  text-align: center;
 }
