--- a/css/aula15.css
+++ b/css/aula15.css
@@ -125,6 +125,10 @@ h1{
 }
 
 /* Conheça */
+.conheca{
+  margin-bottom: 96px;
+}
+
 .conheca h3{
   margin: 32px 0;
   text-align: center;
@@ -132,4 +136,65 @@ h1{
   line-height: 54px;
 }
 
+.conheca section{
+  display: flex;
+  margin: 0 88px;
+  justify-content: space-between;
+  text-align: center;
+}
 
+.conheca p{
+  margin-top: 16px;
+  line-height: 24px;
+}
+
+.conheca strong{
+  display: block;
+}
+
+.conheca a{
+  color: #FF651A;
+  text-decoration: underline;
+}
+
+/* Receitas */
+.receita1{
+  background: #F4DCC3;
+  padding: 40px 0;
+}
+
+.receita1 .container > article{
+  display: flex;
+  gap: 48px;
+  padding-bottom: 40px;
+}
+
+.receita1 h2{
+  font: 700 40px/54px Arial Helvetica, sans-serif;
+  margin: 32px 0 16px;
+}
+
+.receita1 p{
+  color: #4D4D4D;
+  line-height: 24px;
+  width: 75%;
+  margin-bottom: 28px;
+}
+
+.receita1 h3{
+  text-align: center;
+  font-size: 24px;
+  margin: 32px 0;
+}
+
+.dica{
+ margin-top: 24px;
+}
+
+.dica p{
+  width: 91%;
+}
+
+.dica p:first-child{
+  margin-top: 48px;
+}
