--- a/css/aula18.css
+++ b/css/aula18.css
@@ -10,8 +10,14 @@
     height: 50px;
     background: #700;
     margin: 20px;
+    border-radius: 10px;
+    transition: 1s ease all; 
+/* Os valores são: tempo da animação, estilo da animação e o que vai ser animado */
 }
 
 .box:hover{
     background: #090;
+    transform:rotate(180deg);
+    width: 300px;
+    height: 300px;
 }
