--- a/css/aula18.css
+++ b/css/aula18.css
@@ -22,7 +22,11 @@
     height: 300px;
 }
 
-body{display: flex;}
+.cards, .boxes{display: flex;}
+.cards{
+    padding-left: 150px;
+    margin: 20px;
+}
 
 /* KEYFRAMES */
 /* Pode ser aplicado utilizando "from" e "to" ou porcentagens. Utilizando porcentagens é possível adicionar mais animaçoes ao longo de toda a animação, de 0% a 100% */
@@ -35,5 +39,22 @@ body{display: flex;}
     width: 200px;
     height: 200px;
     background: #007;
+    border-radius: 10px;
     animation: anima 3s infinite;
+}
+
+.card{
+    width: 200px;
+    height: 200px;
+    margin: 10px;
+    border-radius: 5px;
+    background: white;
+    box-shadow: 0 0 5px #000;
+    padding: 20px;
+    margin: 5px 5px 5px -150px;
+    transition: .5s ease all;
+}
+
+.card:hover + .card{
+    margin-left: -10px;
 }
