--- a/css/aula19.css
+++ b/css/aula19.css
@@ -23,10 +23,44 @@ nav{
     background: lightslategray;
 }
 
-nav ul{
+nav > ul{
     display: flex;
+    justify-content: center;
 }
 
 nav a{
-    
+    text-decoration: none;
+    color: #fff;
+    font: 18px/1 Arial, Helvetica, sans-serif;
+    display: block;
+    padding: 16px 20px;
+    transition: .1s ease all;
+}
+nav a:hover, nav li:hover{
+    background: lightsalmon;
+    border-radius: 10px;
+}
+
+
+/* Menu popup */
+nav li{
+    position: relative;
+}
+nav li ul{
+    position: absolute;
+    background: lightslategray;
+    width: 100%;
+    text-align: center;
+    border-radius: 0 0 10px 10px;
+    display: none;
+}
+nav li:hover ul{
+    display: block ;
+}
+
+
+/* Começo do conteúdo da Home */
+.banner{
+    height: 400px;
+    background-color: lightskyblue
 }
