--- a/css/aula0.6.css
+++ b/css/aula0.6.css
@@ -1,12 +1,14 @@
 /* Reset do CSS */
 /* "*" (asterisco) é um seletor universal, mitas vezes empregado na informática para emglobar um todo, nesse caso todo o CSS */
-*{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    list-style: none;
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  list-style: none;
 }
-html{scroll-behavior: smooth;}
+html {
+  scroll-behavior: smooth;
+}
 /* Os resets de CSS feitos dessa maneira "limpam" as configurações pré definidas pelo navegador. Empregado aqui somente com o viés didático */
 
 /* Agrupamento de Seletores */
@@ -23,23 +25,25 @@ p{
 } 
 */
 
-h1, h2, p{
-    color: darkgray;
+h1,
+h2,
+p {
+  color: darkgray;
 }
 
 /* Seletor de elemento Descendente */
 /* Nesse tipo de seletor podemos atacar a tag span descendente de outra tag. Se diz "Ataque a tag span somente quando dentro de... */
-h2 span{
-    color: green;
-    font-size: 30px;
+h2 span {
+  color: green;
+  font-size: 30px;
 }
-p span{
-    color: blue;
-    font-size: 10px;
+p span {
+  color: blue;
+  font-size: 10px;
 }
 
 /* ID e Class */
-    /* 
+/* 
     Semelhanças:
     -São atributos Globais;
     -Os dois servem pra identificar elementos HTML para que possamos estiliza-los;
@@ -64,18 +68,18 @@ p span{
             }
     */
 
-#teste2{
-    color: rgb(252, 121, 69);
+#teste2 {
+  color: rgb(252, 121, 69);
 }
-#teste2 span{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    color: cornflowerblue;
+#teste2 span {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: cornflowerblue;
 }
-.teste1 span{
-    color: rgba(122, 20, 20, 0.74);
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 20px;
-    font-weight: bold;
+.teste1 span {
+  color: rgba(122, 20, 20, 0.74);
+  font-family: "Courier New", Courier, monospace;
+  font-size: 20px;
+  font-weight: bold;
 }
 /*
 CLASS com mais de uma string
@@ -95,10 +99,10 @@ B
 */
 
 /* A+B */
-.teste1.teste3{
-    color: aquamarine;
-    font-family: 'Courier New', Courier, monospace;
-    font-size: 5px;
-    font-weight: bold;
-    font-style: italic;
+.teste1.teste3 {
+  color: aquamarine;
+  font-family: "Courier New", Courier, monospace;
+  font-size: 5px;
+  font-weight: bold;
+  font-style: italic;
 }
