--- a/css/aula1.0.css
+++ b/css/aula1.0.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   border: 0;
@@ -6,54 +6,55 @@
 }
 
 /* TOPO */
-h1{
-    width: 520px;
-    height: 106px;
-    margin: 15px auto;
-   overflow: hidden;
+h1 {
+  width: 520px;
+  height: 106px;
+  margin: 15px auto;
+  overflow: hidden;
 }
 
 /* CONTEÚDO */
-.banner{
-    background: url(../../Imagens/Fotos/familia-na-praia.jpg) center no-repeat;
-    text-align: center;
-    background-size: 100%;
-    padding: 170px 0;
+.banner {
+  background: url(../../Imagens/Fotos/familia-na-praia.jpg) center no-repeat;
+  text-align: center;
+  background-size: 100%;
+  padding: 170px 0;
 }
 
-h2{
-    color: black;
-    font:bold 26px Arial, Helvetica, sans-serif;
-    background-color: rgba(255,255,255,0,5);
+h2 {
+  color: black;
+  font: bold 26px Arial, Helvetica, sans-serif;
+  background-color: rgba(255, 255, 255, 0, 5);
 }
 
-.container{
+.container {
   width: 950px;
   margin: -50px auto;
   background: #fff;
 }
 
-.post h4{
+.post h4 {
   color: #900;
-  font: normal 16px 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font: normal 16px "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
 }
 
-.post h3{
+.post h3 {
   font-size: 36px;
   font-family: Arial, Helvetica, sans-serif;
   margin: 10px 0 15px;
 }
 
-.post p{
+.post p {
   margin-bottom: 10px;
 }
 
-.author{
+.author {
   font-size: 18px;
 }
 
 /*  RODAPÉ */
-footer{
+footer {
   border-top: 1px solid black;
   padding: 20px 0;
   margin-top: 30px;
