--- a/css/aula1.2.css
+++ b/css/aula1.2.css
@@ -1,108 +1,113 @@
-*{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    list-style: none;
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  list-style: none;
 }
 
 /* Revisão de Container  */
-.container{
-    width: 1200px;
-    margin: 0 auto;
-    background-color: bisque;
+.container {
+  width: 1200px;
+  margin: 0 auto;
+  background-color: bisque;
 }
 
-.topo{
-    background-color: gray;
+.topo {
+  background-color: gray;
 }
 
-main{
-    width: 1200px;
-    margin: 10px auto;
-    background-color: burlywood;
+main {
+  width: 1200px;
+  margin: 10px auto;
+  background-color: burlywood;
 }
 
 /* Display */
 /* Muda o comportamento padrão daquele tipo de elemento html */
-.d-box2 a{
-    display: block;
-    padding: 10px 40px;
-    text-decoration: none;
+.d-box2 a {
+  display: block;
+  padding: 10px 40px;
+  text-decoration: none;
 }
 
 /* Display: Inline-Block */
-.d-box{
-    background: #333;
+.d-box {
+  background: #333;
 }
 
-.d-box1{
-    width: 200px;
-    height: 100px;
-    background: #03d103;
+.d-box1 {
+  width: 200px;
+  height: 100px;
+  background: #03d103;
 }
 
-.d-box2{
-    width: 250px;
-    height: 130px;
-    background: #009;
+.d-box2 {
+  width: 250px;
+  height: 130px;
+  background: #009;
 }
 
-.d-box1, .d-box2{
-    display: inline-block;
-    vertical-align: top;
+.d-box1,
+.d-box2 {
+  display: inline-block;
+  vertical-align: top;
 }
 
 /* Flex */
 /* Para que els elementos fiquem um ao lado do outro utilizando Flex, dentro do elemento "pai" deve ser atribuido "display: flex;" */
-.f-box{
-    background: #999;
-    display: flex;
-/* Por padrão o flex aperta os elementos filhos para que todos caibam */
+.f-box {
+  background: #999;
+  display: flex;
+  /* Por padrão o flex aperta os elementos filhos para que todos caibam */
 
-    flex-wrap: wrap;
-/* Faz com que os elentos filhos mantenham seu tamnhanho, quebrando para a linha de baixo */
+  flex-wrap: wrap;
+  /* Faz com que os elentos filhos mantenham seu tamnhanho, quebrando para a linha de baixo */
 
-    justify-content: center;
-/* Alinhamento holizontal */
+  justify-content: center;
+  /* Alinhamento holizontal */
 
-    align-items: center;
-/* alinhamento vertical */
+  align-items: center;
+  /* alinhamento vertical */
 }
 
-.f-box1{
-    width: 230px; 
-    height: 150px;
-    margin: 10px;
-    background: #990; 
+.f-box1 {
+  width: 230px;
+  height: 150px;
+  margin: 10px;
+  background: #990;
 }
 
-.f-box2{
-    width: 120px;
-    height: 200px;
-    margin: 10px;
-    background:  #099;
+.f-box2 {
+  width: 120px;
+  height: 200px;
+  margin: 10px;
+  background: #099;
 }
 
-.box1{order: 3;}
-.box10{order: 4;}
+.box1 {
+  order: 3;
+}
+.box10 {
+  order: 4;
+}
 
 /* Grid */
 /* Técnica de tableless que poderia ser utilizada para estruturar o site inteiro, mas geralmente é usado para mosaicos */
 
-.g-box{
-    background: #ccc;
-    display: grid;
-    grid-template-columns: 100px 100px ;
+.g-box {
+  background: #ccc;
+  display: grid;
+  grid-template-columns: 100px 100px;
 }
 
-.g-box1{ 
-    width: 150px;
-    height: 200px;
-    background: #909;
+.g-box1 {
+  width: 150px;
+  height: 200px;
+  background: #909;
 }
 
-.g-box2{
-    width: 300px;
-    height: 150px;
-    background: #900;
+.g-box2 {
+  width: 300px;
+  height: 150px;
+  background: #900;
 }
