--- a/css/aula1.5.css
+++ b/css/aula1.5.css
@@ -33,7 +33,7 @@ th,
 td,
 main,
 article,
-aside, 
+aside,
 figure,
 figcaption,
 footer,
@@ -42,159 +42,171 @@ nav,
 section,
 time,
 audio,
-video{
-  border:0;
-  font-size:100%;
-  font:inherit;
-  margin:0;
-  padding:0;
-  vertical-align:baseline;
+video {
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  margin: 0;
+  padding: 0;
+  vertical-align: baseline;
 }
-html{scroll-behavior:smooth;}
-body{
-  background:#fff;
-  color:#000;
-  font-family:Arial, Helvetica, sans-serif;
-  font-size:16px;
-  line-height:1;
+html {
+  scroll-behavior: smooth;
 }
-ol, 
+body {
+  background: #fff;
+  color: #000;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
+  line-height: 1;
+}
+ol,
 ul,
-li{list-style:none;}
-strong{font-weight: bold;}
-table{
-  border-collapse:collapse;
-  border-spacing:0;
-  width:100%;
+li {
+  list-style: none;
+}
+strong {
+  font-weight: bold;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
 }
 a,
-a:hover{
-  color:#000;
-  text-decoration:none;
-  cursor:pointer;
+a:hover {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
 }
-:focus{outline:0;}
+:focus {
+  outline: 0;
+}
 
 /* Topo */
-h1{
-    text-align: center;
-    margin: 15px 0 14px;
+h1 {
+  text-align: center;
+  margin: 15px 0 14px;
 }
 
 /* Conteúdo Home */
-.banner-principal{margin-bottom: 96px;}
+.banner-principal {
+  margin-bottom: 96px;
+}
 
-.banner-principal img{width: 100%;}
+.banner-principal img {
+  width: 100%;
+}
 
-.container{
+.container {
   width: 1136px;
   margin: 0 auto;
 }
 
-.artigo{
+.artigo {
   margin-bottom: 96px;
-  display:flex;
+  display: flex;
 }
 
-.artigo1 figure{
+.artigo1 figure {
   margin-right: 48px;
 }
 
-.artigo h2{
+.artigo h2 {
   font: 700 48px Arial, Helvetica, sans-serif;
   margin-bottom: 16px;
   width: 80%;
 }
 
-.artigo1 h2{
+.artigo1 h2 {
   margin-top: 46px;
 }
 
-.artigo p{
-  color: #4D4D4D;
+.artigo p {
+  color: #4d4d4d;
   line-height: 25px;
   width: 66%;
 }
 
-.artigo2 article{
+.artigo2 article {
   margin-left: 48px;
 }
 
-.artigo2 p{
+.artigo2 p {
   width: 65%;
 }
 
 /* Conheça */
-.conheca{
+.conheca {
   margin-bottom: 96px;
 }
 
-.conheca h3{
+.conheca h3 {
   margin: 32px 0;
   text-align: center;
   font-size: 40px;
   line-height: 54px;
 }
 
-.conheca section{
+.conheca section {
   display: flex;
   margin: 0 88px;
   justify-content: space-between;
   text-align: center;
 }
 
-.conheca p{
+.conheca p {
   margin-top: 16px;
   line-height: 24px;
 }
 
-.conheca strong{
+.conheca strong {
   display: block;
 }
 
-.conheca a{
-  color: #FF651A;
+.conheca a {
+  color: #ff651a;
   text-decoration: underline;
 }
 
 /* Receitas */
-.receita1{
-  background: #F4DCC3;
+.receita1 {
+  background: #f4dcc3;
   padding: 40px 0;
 }
 
-.receita1 .container > article{
+.receita1 .container > article {
   display: flex;
   gap: 48px;
   padding-bottom: 40px;
 }
 
-.receita1 h2{
+.receita1 h2 {
   font: 700 40px/54px Arial Helvetica, sans-serif;
   margin: 32px 0 16px;
 }
 
-.receita1 p{
-  color: #4D4D4D;
+.receita1 p {
+  color: #4d4d4d;
   line-height: 24px;
   width: 75%;
   margin-bottom: 28px;
 }
 
-.receita1 h3{
+.receita1 h3 {
   text-align: center;
   font-size: 24px;
   margin: 32px 0;
 }
 
-.dica{
- margin-top: 24px;
+.dica {
+  margin-top: 24px;
 }
 
-.dica p{
+.dica p {
   width: 91%;
 }
 
-.dica p:first-child{
+.dica p:first-child {
   margin-top: 48px;
 }
