--- a/css/aula1.8.css
+++ b/css/aula1.8.css
@@ -1,60 +1,67 @@
-*{
-    padding: 0;
-    margin: 0;
-    border: 0;
-    list-style: none;
+* {
+  padding: 0;
+  margin: 0;
+  border: 0;
+  list-style: none;
 }
 
-.box{
-    width: 200px;
-    height: 50px;
-    background: #700;
-    margin: 20px;
-    border-radius: 10px;
-    transition: 1s ease all; 
-/* Os valores são: tempo da animação, estilo da animação e o que vai ser animado */
+.box {
+  width: 200px;
+  height: 50px;
+  background: #700;
+  margin: 20px;
+  border-radius: 10px;
+  transition: 1s ease all;
+  /* Os valores são: tempo da animação, estilo da animação e o que vai ser animado */
 }
 
-.box:hover{
-    background: #090;
-    transform:rotate(180deg);
-    width: 300px;
-    height: 300px;
+.box:hover {
+  background: #090;
+  transform: rotate(180deg);
+  width: 300px;
+  height: 300px;
 }
 
-.cards, .boxes{display: flex;}
-.cards{
-    padding-left: 150px;
-    margin: 20px;
+.cards,
+.boxes {
+  display: flex;
+}
+.cards {
+  padding-left: 150px;
+  margin: 20px;
 }
 
 /* KEYFRAMES */
 /* Pode ser aplicado utilizando "from" e "to" ou porcentagens. Utilizando porcentagens é possível adicionar mais animaçoes ao longo de toda a animação, de 0% a 100% */
-@keyframes anima{
-    from{background: #007;}
-    to{background: #700;}
-}
-.box2{
-    margin: 20px;
-    width: 200px;
-    height: 200px;
+@keyframes anima {
+  from {
     background: #007;
-    border-radius: 10px;
-    animation: anima 3s infinite;
+  }
+  to {
+    background: #700;
+  }
+}
+.box2 {
+  margin: 20px;
+  width: 200px;
+  height: 200px;
+  background: #007;
+  border-radius: 10px;
+  animation: anima 3s infinite;
 }
 
-.card{
-    width: 200px;
-    height: 200px;
-    margin: 10px;
-    border-radius: 5px;
-    background: white;
-    box-shadow: 0 0 5px #000;
-    padding: 20px;
-    margin: 5px 5px 5px -150px;
-    transition: .5s ease all;
+.card {
+  width: 200px;
+  height: 200px;
+  margin: 10px;
+  border-radius: 5px;
+  background: white;
+  box-shadow: 0 0 5px #000;
+  padding: 20px;
+  margin: 5px 5px 5px -150px;
+  transition: 0.5s ease all;
 }
 
-.card:hover + .card{
-    margin-left: -10px;
+.card:hover + .card {
+  margin-left: -10px;
 }
